# FeinnAgent

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  LICENSE  README.md  README.zh.md  pyproject.toml  wiki.md  wiki.zh.md
.feinn/: tasks.json
.feinn/skills/: get_weather.md
docs/: architecture.md  azure-openai-setup.md  browser-feature-requirements.md  browser-feature-technical.md  browser-usage.md  execution-engine-requirements.md  execution-engine-technical.md  feature-comparison.md  interactive-mode-enhancement.md  plan-system-requirements.md  plan-system-technical.md  requirements.md  roadmap.md  siliconflow-setup.md  skill-development.md  technical.md  test-coverage-analysis.md  vllm-deployment.md  vllm-deployment.zh.md  vllm-qwen35-demo.md
src/feinn_agent/: __init__.py  agent.py  cli.py  compaction.py  config.py  context.py  providers.py  server.py  types.py
src/feinn_agent/checkpoint/: __init__.py
src/feinn_agent/display/: __init__.py
src/feinn_agent/interrupt/: __init__.py
src/feinn_agent/mcp/: __init__.py  client.py
src/feinn_agent/memory/: __init__.py  store.py
src/feinn_agent/permission/: __init__.py
src/feinn_agent/plan/: __init__.py
tests/: test_agent.py  test_browser.py  test_browser_providers.py  test_checkpoint.py  test_compaction.py  test_config.py  test_context.py  test_core.py  test_execution_engine.py  test_mcp.py  test_memory.py  test_plan_system.py  test_providers.py  test_server.py  test_skill.py  test_skills.py  test_subagent.py  test_task.py  test_tools.py  test_trajectory.py
(+24 files in other folders)
