[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feinn-agent"
version = "0.1.0"
description = "Enterprise-grade async AI agent framework with multi-concurrency support"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "watchdog>=5.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
feinn = "feinn_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feinn_agent"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
